zien24_implementation/org/objects/CPQB__Billing_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>CPQB__Billing_Interval_in_Days__c</fullName>
        <label>Billing Interval in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Billing_Interval_in_Months__c</fullName>
        <label>Billing Interval in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Billing_Start_Date_Offset_in_Days__c</fullName>
        <label>Billing Start Date Offset in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Billing_Start_Date_Offset_in_Months__c</fullName>
        <label>Billing Start Date Offset in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Billing_Start_Date_Reference_Point__c</fullName>
        <label>Billing Start Date Reference Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Start Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Upfront_Billing_Window_in_Days__c</fullName>
        <label>Upfront Billing Window in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQB__Upfront_Billing_Window_in_Months__c</fullName>
        <label>Upfront Billing Window in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Billing Schedule</label>
    <listViews>
        <fullName>CPQB__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>